--- a/configuration/index.html
+++ b/configuration/index.html
@@ -2,7 +2,8 @@
 
 <head>
 	<title>Konfiguration</title>
-	<script type="text/javascript" src="script.js"
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -10,11 +11,16 @@
 		<div id="flavors">
 			
 		</div>
-		<div id="color">
+		<div id="colors">
 			
 		</div>
 		<div id="specials"></div>
 	</form>
+	<div id="selector-wrapper">
+		<div class="selector" id="flavors-sel"></div>
+		<div class="selector" id="colors-sel"></div>
+		<div class="selector" id="specials-sel"></div>
+	</div>
 </body>
 
 </html>
