just added a comment
hope you understand it :D

--- a/configuration/index.html
+++ b/configuration/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Konfiguration</title>
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"><!--- This is needed to make jQuery work---></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 
