Added "Passionsfrucht" + better style
"Passionsfrucht" as added in the form on Google Drive;
different font and other minor style changes.

--- a/configuration/index.html
+++ b/configuration/index.html
@@ -11,8 +11,9 @@
 	<form action=/*Page that should be opened after this one*/"" method="post">
 		<div class="config-step" id="flavors">
 			<p>Aromen:</p>
-			<input type="checkbox" name="Zitrone">Zitrone <br>
-			<input type="checkbox" name="Orange">Orange
+			<input type="checkbox" name="Zitrone"> Zitrone <br>
+			<input type="checkbox" name="Orange"> Orange <br>
+			<input type="checkbox" name="Passionsfrucht"> Passionsfrucht
 		</div>
 		<div class="config-step" id="colors">
 			<p>Farbstoffe:</p>
