--- a/configuration/index.html
+++ b/configuration/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+	<div id="directory">
+		<a href="http://saftbar.net16.net/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
+    	<div class="dir-item"><a href="http://configurator.saftbar.net16.net/" class="dir-link">WINTER</a></div>
+    	<div class="dir-item"><a href="http://configurator.saftbar.net16.net/" class="dir-link">IS</a></div>
+    	<div class="dir-item"><a href="http://configurator.saftbar.net16.net/" class="dir-link">COMING</a></div>
+    </div>
 	<form action=/*Page that should be opened after this one*/"" method="post">
 		<div class="config-step" id="flavors">
 			<p>Aromen:</p>
