--- a/configuration/index.html
+++ b/configuration/index.html
@@ -15,11 +15,11 @@
     	<div class="dir-item"><a href="http://configurator.saftbar.net16.net/" class="dir-link">IS</a></div>
     	<div class="dir-item"><a href="http://configurator.saftbar.net16.net/" class="dir-link">COMING</a></div>
     </div>
-	<form action=/*Page that should be opened after this one*/"" method="post">
+	<form action="order/index.php" method="post">
 		<div class="config-step" id="flavors">
 			<div class="step-header"><p>Aromen</p></div>
 			<div class="option-wrapper">
-				<div class="option label, config-option"><div class="option-checkbox"><input type="checkbox" name="Zitrone" class="config-option"></div>	Zitrone</div> <br>
+				<div class="option-label"><input type="checkbox" name="Zitrone" class="config-option">	Zitrone</div> <br>
 				<div class="option-label"><input type="checkbox" name="Orange" class="config-option">	Orange</div> <br>
 				<div class="option-label"><input type="checkbox" name="Passionsfrucht" class="config-option">	Passionsfrucht</div>
 			</div>
@@ -37,6 +37,7 @@
 			<div class="option-wrapper">
 				<div class="option-label"><input type="checkbox" name="Kohlensäure" class="config-option">	Kohlensäure</div> <br>
 				<div class="option-label"><input type="checkbox" name="Koffein" class="config-option">	Koffein</div>
+				<input type="submit">
 			</div>
 		</div>
 	</form>
