--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
 		<div id="shade"></div>
     	<div id="directory">
-		  	<a href="http://limolouge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
-        <div class="dir-item"><a href="http://limolouge.16mb.com/" class="dir-link">WINTER</a></div>
-    	  <div class="dir-item"><a href="http://limolouge.16mb.com/configuration/" class="dir-link">IS</a></div>
-    	  <div class="dir-item"><a href="http://limolouge.16mb.com/configuration/" class="dir-link">COMING</a></div>
+		  	<a href="http://limolounge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
+        <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">WINTER</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">IS</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">COMING</a></div>
     	</div>
     	<div id="staff-container">
 		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
@@ -19,15 +19,15 @@
 		  	<div class="staff"><img class="staff-img" src="Bilder/CFO.jpg"/></div>
 	  	</div>
 	  	<div id="staff-description-container">
-	  		<a href="http://limolouge.16mb.com/configuration/"><div class="staff-description" id="staff-description-1">CEO</div></a>
-		  	<a href="http://limolouge.16mb.com/configuration/"><div class="staff-description" id="staff-description-2">COO</div></a>
-	  		<a href="http://limolouge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
-	  		<a href="http://limolouge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-1">CEO</div></a>
+		  	<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-2">COO</div></a>
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
 	    </div>
       <div id="introduction">
 			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
       </div>
-    	<a href="http://limolouge.16mb.com/configuration/">
+    	<a href="http://limolounge.16mb.com/configuration/">
 			  <div id="btn-order">
 				  <p>Jetzt erstellen!</p>
 			  </div>
