--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
 	    </div>
       <div id="introduction">
-			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persÃ¶nliches GetrÃ¤nk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
+			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
       </div>
     	<a href="http://limolounge.16mb.com/configuration/">
 			  <div id="btn-order">
