fixed missing points

--- a/configuration/index.html
+++ b/configuration/index.html
@@ -37,7 +37,7 @@
 			<div class="option-wrapper">
 				<div class="option-label"><input type="checkbox" name="Kohlensäure" class="config-option">	Kohlensäure</div> <br>
 				<div class="option-label"><input type="checkbox" name="Koffein" class="config-option">	Koffein</div>
-				<input type="submit" value="Bestellen" id="btn-Order>
+				<input type="submit" value="Bestellen" id="btn-Order">
 			</div>
 		</div>
 	</form>
