--- a/configuration/index.html
+++ b/configuration/index.html
@@ -15,7 +15,7 @@
     	<div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">IS</a></div>
     	<div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">COMING</a></div>
     </div>
-	<form action="order/index.php" method="post">
+	<form action="confirm/index.php" method="post">
 		<div class="config-step" id="flavors">
 			<div class="step-header"><p>Aromen</p></div>
 			<div class="option-wrapper">
