--- a/configuration/index.html
+++ b/configuration/index.html
@@ -38,7 +38,7 @@
 		<div class="config-step" id="specials">
 			<div class="step-header"><p>Spezielle Zutaten</p></div>
 			<div class="option-wrapper">
-				<div class="option-label"><input type="checkbox" name="Kohlensäure" class="config-option">	Kohlensäure</div> <br>
+				<div class="option-label"><input type="checkbox" name="Kohlensaeure" class="config-option">	Kohlensäure</div> <br>
 				<div class="option-label"><input type="checkbox" name="Koffein" class="config-option">	Koffein</div>
 			</div>
 			<div class="button" id="specials-backBtn">Zurück</div>
