--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<div id="shade"></div>
     	<div id="directory">
 		  	<a href="http://limolounge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
-        <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">WINTER</a></div>
-    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">IS</a></div>
-    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">COMING</a></div>
+        <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">Start</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Staff</a></div>
     	</div>
     	<div id="staff-container">
 		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
