--- a/staff/index.html
+++ b/staff/index.html
@@ -1,1 +1,33 @@
-d
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Staff</title>
+    	<link type="text/css" rel="stylesheet" href="stylesheet.css"
+    </head>
+    <body>
+		<div id="shade"></div>
+    	<div id="directory">
+		  	<a href="http://limolounge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
+        <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">Start</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Staff</a></div>
+    	</div>
+    	<div id="staff-container">
+		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
+		  	<div class="staff"><img class="staff-img" src="Bilder/Anonymous.jpg"/></div>
+		  	<div class="staff"><img class="staff-img" src="Bilder/Anonymous.jpg"/></div>
+		  	<div class="staff"><img class="staff-img" src="Bilder/CFO.jpg"/></div>
+	  	</div>
+	  	<div id="staff-description-container">
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-1">CEO</div></a>
+		  	<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-2">COO</div></a>
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
+	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
+	    </div>
+		<div id="impressum">
+			<p class="impr-paragraph" id="impr-heading">Impressum</p>
+			<p class="impr-paragraph">Made by the Big Dick Gang!</p>
+		</div>
+    </body>
+</html>
+
