--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<SCRIPT language="JavaScript">
+		<!--hide
+
+			var password;
+
+			var pass1="valar dohaeris";
+
+			password=prompt('Valar Morghulis!',' ');
+
+			if (password==pass1)
+				alert('You may pass, brother!');
+				
+			else{
+				window.location="http://limolounge.16mb.com/";
+			}
+		//-->
+		</SCRIPT>
         <title>Startseite</title>
     	<link type="text/css" rel="stylesheet" href="stylesheet.css"
     </head>
@@ -12,7 +29,7 @@
     	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
     	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/staff" class="dir-link">Staff</a></div>
     	</div>
-    	<div id="staff-container">
+    	<!--<div id="staff-container">
 		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
 		  	<div class="staff"><img class="staff-img" src="Bilder/Anonymous.jpg"/></div>
 		  	<div class="staff"><img class="staff-img" src="Bilder/Anonymous.jpg"/></div>
@@ -23,7 +40,7 @@
 		  	<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-2">COO</div></a>
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
-	    </div>
+	    </div>-->
       <div id="introduction">
 			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
       </div>
