different solution for password
deleted 'old' javascript code and added a php-script that asks for the
password. hope it works
also fixed an error in staff page

--- a/staff/index.html
+++ b/staff/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Staff</title>
-    	<link type="text/css" rel="stylesheet" href="stylesheet.css"
+    	<link type="text/css" rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
 		<div id="shade"></div>
