Revert "another fix"
This reverts commit a281c219545ed29cd435c980ddf581d3df1cef99.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 		<img src="Bilder/Logo.png"/>
         <title>Startseite</title>
-    	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    	<link type="text/css" rel="stylesheet" href="stylesheet.css"
     </head>
     <body>
 		<div id="shade"></div>
