fixed confirm page and added COO description on staff page

--- a/staff/index.html
+++ b/staff/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Staff</title>
-    	<link type="text/css" rel="stylesheet" href="stylesheet.css">
+    	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    	<meta charset="UTF-8">
     </head>
     <body>
 		<div id="shade"></div>
@@ -28,7 +29,9 @@
 					<div class="staffIMGdescr">COO</div>
 				</div>
 				<div class="staffDescr">
-					<p class="staffDescrTxt">Hallo ich bin der COO MOFO! Yo was geht ääääb, du sack?</p>
+					<p class="staffDescrTxt">Als COO (Chief Operating Officer) leitet Marvin Heinzelmann das gesamte operative Geschäft 
+					von LimoLoung Inc. Der renommierte Grundschulabsolvent und Teilnehmer des Freiburg-Seminars hat schon vor seiner 
+					Karriere bei LimoLounge Inc. viele Erfahrungen im Bereich der Softwareentwicklung und der Koordinierung von Projekten gemacht.</p>
 				</div>
 			</div>
 			<div class="staffMember">
