Fixed staff descr

--- a/staff/index.html
+++ b/staff/index.html
@@ -20,7 +20,7 @@
 					<div class="staffIMGdescr">CEO</div>
 				</div>
 				<div class="staffDescr">
-					<p class="staffDescrTxt"></p>
+					<p class="staffDescrTxt">Als CEO von LimoLounge Inc. behält Timo Baljer stets den Überblick und gibt die Richtung des Unternehmens vor. Mit einem Handicap von 54 und seinem dichten Netzwerk in Politik und Wirtschaft ist er für diesen Posten mehr als qualifiziert. Durch Timo Baljer konnte das Unternehmen im letzten Quartal einen Budgetzuwachs von sage und schreibe 40€ erreichen.</p>
 				</div>
 			</div>
 			<div class="staffMember">
@@ -30,7 +30,7 @@
 				</div>
 				<div class="staffDescr">
 					<p class="staffDescrTxt">Als COO (Chief Operating Officer) leitet Marvin Heinzelmann das gesamte operative Geschäft 
-					von LimoLoung Inc. Der renommierte Grundschulabsolvent und Teilnehmer des Freiburg-Seminars hat schon vor seiner 
+					von LimoLounge Inc. Der renommierte Grundschulabsolvent und Teilnehmer des Freiburg-Seminars hat schon vor seiner 
 					Karriere bei LimoLounge Inc. viele Erfahrungen im Bereich der Softwareentwicklung und der Koordinierung von Projekten gemacht.</p>
 				</div>
 			</div>
