--- a/configuration/dev_index.html
+++ b/configuration/dev_index.html
@@ -48,13 +48,17 @@
 				<div class="option-label"><input type="checkbox" name="Koffein" class="config-option">	Koffein</div>
 			</div>
 			<div class="button" id="specials-backBtn">Zurück</div>
-			<input type="submit" value="Bestellen" class="button" id="btn-Finished">
+			<button type="submit" class="button" id="btn-Finished">Bestellen</button>
 		</div>
 	</form>
 	<div id="points-wrapper">
 		<div class="point" id="flavors-point"></div>
 		<div class="point" id="colors-point"></div>
 		<div class="point" id="specials-point"></div>
+	</div>
+	<div id="impressum">
+		<p class="impr-paragraph" id="impr-heading">Impressum</p>
+		<p class="impr-paragraph">Made by the Big Dick Gang!</p>
 	</div>
 </body>
 
