--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<div id="shade"></div>
     	<div id="directory">
 		  	<a href="http://limolounge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
-        <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">Start</a></div>
-    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
-    	  <div class="dir-item"><a href="http://limolounge.16mb.com/staff/" class="dir-link">Staff</a></div>
+			<div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">Start</a></div>
+			<div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
+			<div class="dir-item"><a href="http://limolounge.16mb.com/staff/" class="dir-link">Staff</a></div>
     	</div>
     	<!--<div id="staff-container">
 		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
@@ -27,11 +27,13 @@
       <div id="introduction">
 			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
       </div>
-    	<a href="http://limolounge.16mb.com/configuration/">
+	  <div id="btn-wrapper">
+		  <a href="http://limolounge.16mb.com/configuration/">
 			  <div id="btn-order">
 				  <p>Jetzt erstellen!</p>
 			  </div>
 		  </a>
+	  </div>
 		  <div id="impressum">
 			  <p class="impr-paragraph" id="impr-heading">Impressum</p>
 			  <p class="impr-paragraph">Made by the Big Dick Gang!</p>
