--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	  </div>
 		  <div id="impressum">
 			  <p class="impr-paragraph" id="impr-heading">Impressum</p>
-			  <p class="impr-paragraph">Made by the Big Dick Gang!</p>
+			  <p class="impr-paragraph">Made by the TMJJ Gang!</p>
 		  </div>
     </body>
 </html>
