--- a/staff/index.html
+++ b/staff/index.html
@@ -40,7 +40,7 @@
 					<div class="staffIMGdescr">CMO</div>
 				</div>
 				<div class="staffDescr">
-					<p class="staffDescrTxt"></p>
+					<p class="staffDescrTxt">Jonas Kemna...</p>
 				</div>
 			</div>
 			<div class="staffMember">
@@ -49,13 +49,15 @@
 					<div class="staffIMGdescr">CFO</div>
 				</div>
 				<div class="staffDescr">
-					<p class="staffDescrTxt"></p>
+					<p class="staffDescrTxt">Jonas Röser verwaltet die Finanzen der Firma und arbeitet neue Buissinesspläne für Investoren heraus.
+					Schön früh hatte die Firma ein AUge auf ihn, was unter Anderem seinem orangen Judo-Gurt zu verdanken ist,
+					der ihn im Finanzmarkt zu einem der Top Manager macht.</p>
 				</div>
 			</div>
 		</div>
 		<div id="impressum">
 			<p class="impr-paragraph" id="impr-heading">Impressum</p>
-			<p class="impr-paragraph">Made by the Big Dick Gang!</p>
+			<p class="impr-paragraph">Made by the TMJJ Gang!</p>
 		</div>
     </body>
 </html>
