--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
 	    </div>-->
-      <div id="introduction">
+		<div id="limoContainer"><img id="limoIMG" src="Bilder/LimoTransparent.jpg"/></div>
+		<div id="introduction">
 			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
-      </div>
-	  <div id="btn-wrapper">
-		  <a href="http://limolounge.16mb.com/configuration/">
-			  <div id="btn-order">
-				  <p>Jetzt erstellen!</p>
-			  </div>
-		  </a>
-	  </div>
-		  <div id="impressum">
-			  <p class="impr-paragraph" id="impr-heading">Impressum</p>
-			  <p class="impr-paragraph">Made by the TMJJ Gang!</p>
-		  </div>
-    </body>
+		</div>
+		<div id="btn-wrapper">
+		<a href="http://limolounge.16mb.com/configuration/">
+			<div id="btn-order">
+				<p>Jetzt erstellen!</p>
+			</div>
+		</a>
+		</div>
+		<div id="impressum">
+			<p class="impr-paragraph" id="impr-heading">Impressum</p>
+			<p class="impr-paragraph">Made by the TMJJ Gang!</p>
+		</div>
+	</body>
 </html>
