--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
 	    </div>-->
-		<div id="limoContainer"><img id="limoIMG" src="Bilder/LimoTransparent.jpg"/></div>
+		<div id="limoContainer"><video id="limoVID" src="Bilder/NWT-Teaser0.MP4" poster="Bilder/VideoStandbild.jpg" autobuffer autoplay controls></div>
 		<div id="introduction">
 			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
 		</div>
