updated few things

--- a/staff/index.html
+++ b/staff/index.html
@@ -11,7 +11,7 @@
 		  	<a href="http://limolounge.16mb.com/"><div id="logo"><img id="logo-img" src="Bilder/Logo.png"></div></a>
         <div class="dir-item"><a href="http://limolounge.16mb.com/" class="dir-link">Start</a></div>
     	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
-    	  <div class="dir-item"><a href="http://limolounge.16mb.com/configuration/staff/" class="dir-link">Staff</a></div>
+    	  <div class="dir-item"><a href="http://limolounge.16mb.com/staff/" class="dir-link">Staff</a></div>
     	</div>
     	<div id="staff-container">
 			<div class="staffMember">
