--- a/configuration/dev_index.html
+++ b/configuration/dev_index.html
@@ -58,7 +58,7 @@
 	</div>
 	<div id="impressum">
 		<p class="impr-paragraph" id="impr-heading">Impressum</p>
-		<p class="impr-paragraph">Made by the Big Dick Gang!</p>
+		<p class="impr-paragraph">Made by TMJJ Gang!</p>
 	</div>
 </body>
 
