--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<div class="dir-item"><a href="http://limolounge.16mb.com/configuration/" class="dir-link">Configurate</a></div>
 			<div class="dir-item"><a href="http://limolounge.16mb.com/staff/" class="dir-link">Staff</a></div>
     	</div>
+    	<div id="preisstempel"><img class="rotate" id="preisstempel-img" src="Bilder/Preisstempel.png"></div>
     	<!--<div id="staff-container">
 		  	<div class="staff"><img class="staff-img" src="Bilder/CEO.jpg"/></div>
 		  	<div class="staff"><img class="staff-img" src="Bilder/Anonymous.jpg"/></div>
