fixed some minor style errors and tried something with CSS. Works on my phone screen but I still have to test it on a PC.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-3">CMO</div></a>
 	  		<a href="http://limolounge.16mb.com/configuration/"><div class="staff-description" id="staff-description-4">CFO</div></a>
 	    </div>-->
-		<div id="limoContainer"><video id="limoVID" src="Bilder/NWT-Teaser0.MP4" poster="Bilder/VideoStandbild.jpg" autobuffer autoplay controls></div>
+		<div id="limoContainer"><video id="limoVID" src="Bilder/NWT-Teaser0.MP4" poster="Bilder/VideoStandbild.jpg" autobuffer autoplay controls></video></div>
 		<div id="introduction">
-			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persönliches Getränk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
+			  <p>Auf dieser Website kannst Du in wenigen Schritten dein ganz persï¿½nliches Getrï¿½nk erstellen. Du hast die Wahl an verschiedenen Aromen, Farbstoffen und Spezialzutaten!</p>
 		</div>
 		<div id="btn-wrapper">
 		<a href="http://limolounge.16mb.com/configuration/">
